[gd_scene load_steps=9 format=2]

[ext_resource path="res://RainIsoMainContents/Resources/MelodyTownHeart.png" type="Texture" id=1]
[ext_resource path="res://RainIsoMainContents/Scenes/MelodyTownHeart.gd" type="Script" id=2]
[ext_resource path="res://RainIsoMainContents/Resources/HeartFrame1.png" type="Texture" id=3]
[ext_resource path="res://RainIsoMainContents/Resources/BlankSpace.png" type="Texture" id=4]
[ext_resource path="res://RainIsoMainContents/Resources/HeartFrame2.png" type="Texture" id=5]
[ext_resource path="res://RainIsoMainContents/Resources/GlowPiece2.png" type="Texture" id=6]

[sub_resource type="CircleShape2D" id=1]
radius = 33.1953

[sub_resource type="Animation" id=2]
resource_name = "HeartAni"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 1 ), ExtResource( 3 ), ExtResource( 5 ), ExtResource( 3 ), ExtResource( 4 ) ]
}

[node name="MelodyTownHeart" type="Area2D"]
collision_layer = 0
collision_mask = 10
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/HeartAni = SubResource( 2 )

[node name="Light2D" type="Light2D" parent="."]
texture = ExtResource( 6 )
texture_scale = 2.0

[node name="Timer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[node name="HeartTimer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_MelodyTownHeart_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="HeartTimer" to="." method="_on_HeartTimer_timeout"]
